--- a/app/src/main/res/layout/container.xml
+++ b/app/src/main/res/layout/container.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:id="@+id/content_frame"
-    android:visibility="invisible">
 
-    <RelativeLayout
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+    android:visibility="gone"
+    android:id="@+id/content_frame1">
 
         <WebView
             android:layout_width="match_parent"
@@ -45,5 +42,3 @@
         </LinearLayout>
 
     </RelativeLayout>
-
-</FrameLayout>
