--- a/app/src/main/res/layout/gre_formulas.xml
+++ b/app/src/main/res/layout/gre_formulas.xml
@@ -8,7 +8,6 @@
     android:layout_alignParentLeft="true"
     android:layout_alignParentStart="true"
     android:layout_alignParentTop="true"
-    app:menu="@menu/formulas_menu"
     android:orientation="horizontal">
 
     <!-- Left Part-->
@@ -17,7 +16,8 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:gravity="center"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:id="@+id/formulas_left_part">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -163,7 +163,8 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:gravity="center"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:id="@+id/formulas_right_part">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -301,4 +302,6 @@
         </LinearLayout>
     </LinearLayout>
     <!-- The end of the right part -->
+
+   <include layout="@layout/menu_formulas"/>
 </LinearLayout>
