--- a/app/src/main/res/layout/gre_formulas_quantummechanics.xml
+++ b/app/src/main/res/layout/gre_formulas_quantummechanics.xml
@@ -10,5 +10,11 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-    <include layout="@layout/container"/>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/content_frame"
+        android:visibility="gone"/>
+
+    <!-- <include layout="@layout/container"/> -->
 </RelativeLayout>
