--- a/app/src/main/res/menu/formulas_menu.xml
+++ b/app/src/main/res/menu/formulas_menu.xml
@@ -3,10 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/nav_myworld"
-        android:title="@string/formulas_settings" />
+        android:id="@+id/formulas_menu_settings"
+        android:title="@string/formulas_settings"
+        android:orderInCategory="1"/>
     <item
-        android:id="@+id/nav_mysteps"
-        android:title="@string/formulas_about_program" />
-
+        android:id="@+id/formulas_menu_about"
+        android:title="@string/formulas_about_program"
+        android:orderInCategory="2"/>
+    <item
+        android:id="@+id/formulas_menu_literature"
+        android:title="@string/formulas_literature"
+        android:orderInCategory="2"/>
+    <item
+        android:id="@+id/formulas_menu_tips"
+        android:title="@string/formulas_useful_tips"
+        android:orderInCategory="2"/>
 </menu>
